--- a/src/main/webapp/test.xhtml
+++ b/src/main/webapp/test.xhtml
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
 <h:head>
-        <title>JSF 2.0 + PrimeFaces 3.0 + Spring 3.0 + Hibernate 3.6 + Maven 3.0</title>
+        <title>MyPack - JSF &hearts; Docker</title>
 </h:head>
 <h:body>
         <h:form>
